@@ -64,6 +64,7 @@ lib/Imager/Files.pod
 lib/Imager/Draw.pod
 lib/Imager/Transformations.pod
 lib/Imager/ImageTypes.pod
+lib/Imager/Filters.pod
 lib/Imager/Fill.pm
 lib/Imager/Font.pm
 lib/Imager/Font/Type1.pm
