@@ -595,6 +595,7 @@ Revision history for Perl extension Imager.
 	- Added lib/Imager/Draw.pod documentation of primitives.
 	- Added lib/Imager/Transformations.pod, some docs of simple transforms.
 	- Added lib/Imager/ImageTypes.pod, draft of ImageType pod.
+	- Added lib/Imager/Filters.pod, draft of Filters pod.
 
 
 =================================================================
